objects/pse__Billing_Event_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_Prior_Periods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Prior Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Locale_Information__c</fullName>
        <label>Locale Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Billing Event Calculations</relationshipLabel>
        <relationshipName>Billing_Event_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Event Calculation</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BEC-{000000}</displayFormat>
        <label>Billing Event Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>